--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+ <parent>
+  <groupId>de.metalcon</groupId>
+  <artifactId>pom</artifactId>
+  <version>0.0.1</version>
+ </parent>
 
-	<groupId>de.metalcon.</groupId>
-	<artifactId>haveInCommons</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+ <modelVersion>4.0.0</modelVersion>
+ <artifactId>like-server</artifactId>
+ <version>0.0.1-SNAPSHOT</version>
 
-	<name>haveInCommons</name>
-	<url>http://maven.apache.org</url>
+ <name>like</name>
+ <url>https://github.com/Metalcon/likeButtonServer</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.fusesource.leveldbjni</groupId>
-			<artifactId>leveldbjni-all</artifactId>
-			<version>1.7</version>
-		</dependency>
-	</dependencies>
+ <dependencies>
+  <dependency>
+   <groupId>de.metalcon</groupId>
+   <artifactId>muid</artifactId>
+   <version>0.0.1-SNAPSHOT</version>
+  </dependency>
+  <dependency>
+   <groupId>org.fusesource.leveldbjni</groupId>
+   <artifactId>leveldbjni-all</artifactId>
+   <version>1.7</version>
+  </dependency>
+ </dependencies>
+ 
+ <repositories>
+  <!-- Metalcon repository to resolve dependencies from -->
+  <repository>
+   <id>metalcon-depend</id>
+   <url>http://metalcon2.physik.uni-mainz.de:8080/mvn/</url>
+  </repository>
+ </repositories>
 </project>
