--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,6 @@
  <artifactId>like-server</artifactId>
  <version>0.0.1-SNAPSHOT</version>
 
-<properties>
-    <!-- Test -->
-    <junit.version>4.11</junit.version>
-    <mockito.version>1.9.5</mockito.version>
-    <hamcrest.version>1.3</hamcrest.version>
-
-</properties>
 
  <name>like</name>
  <url>https://github.com/Metalcon/likeButtonServer</url>
@@ -32,6 +25,13 @@
    <artifactId>leveldbjni-all</artifactId>
    <version>1.7</version>
   </dependency>
+          <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+  
  </dependencies>
  
  <repositories>
