--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
   <dependency>
    <groupId>de.metalcon</groupId>
    <artifactId>muid</artifactId>
+   <version>0.1.0-SNAPSHOT</version>
+  </dependency>
+  <dependency>
+   <groupId>de.metalcon</groupId>
+   <artifactId>like-server-api</artifactId>
    <version>0.0.1-SNAPSHOT</version>
   </dependency>
   <dependency>
@@ -25,15 +30,15 @@
    <artifactId>leveldbjni-all</artifactId>
    <version>1.8</version>
   </dependency>
-          <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
-        </dependency>
-  
+  <dependency>
+   <groupId>junit</groupId>
+   <artifactId>junit</artifactId>
+   <version>4.8.2</version>
+   <scope>test</scope>
+  </dependency>
+
  </dependencies>
- 
+
  <repositories>
   <!-- Metalcon repository to resolve dependencies from -->
   <repository>
