--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
  <name>like</name>
  <url>https://github.com/Metalcon/likeButtonServer</url>
 
+
  <dependencies>
   <dependency>
    <groupId>de.metalcon</groupId>
@@ -36,6 +37,13 @@
    <version>4.8.2</version>
    <scope>test</scope>
   </dependency>
+
+    <dependency>
+      <groupId>net.hh</groupId>
+      <artifactId>RequestDispatcher</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+
 
  </dependencies>
 
