Moved LevelDbHandler into its own project: db-helper

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
    <version>0.1.0</version>
   </dependency>
   <dependency>
+   <groupId>de.metalcon</groupId>
+   <artifactId>db-helper</artifactId>
+   <version>0.0.2</version>
+  </dependency>
+  <dependency>
    <groupId>org.fusesource.leveldbjni</groupId>
    <artifactId>leveldbjni-all</artifactId>
    <version>1.8</version>
