--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
  <parent>
   <groupId>de.metalcon</groupId>
   <artifactId>pom</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.4</version>
  </parent>
 
  <modelVersion>4.0.0</modelVersion>
@@ -12,6 +12,26 @@
 
  <name>like</name>
  <url>https://github.com/Metalcon/likeButtonServer</url>
+
+ <licenses>
+  <license>
+   <name>GNU General Public License 3.0</name>
+   <url>http://www.gnu.org/licenses/gpl.html</url>
+   <distribution>repo</distribution>
+  </license>
+ </licenses>
+
+ <developers>
+  <developer>
+   <id>jonaskunze</id>
+   <name>Jonas Kunze</name>
+   <email>kunze.jonas@gmail.com</email>
+   <roles>
+    <role>developer</role>
+   </roles>
+  </developer>
+ </developers>
+
 
  <dependencies>
   <dependency>
@@ -39,7 +59,7 @@
   <dependency>
    <groupId>net.hh</groupId>
    <artifactId>RequestDispatcher</artifactId>
-   <version>1.3.0</version>
+   <version>1.4.0</version>
   </dependency>
 
 
