Bugfix: Tests didnt initialize Configs

--- a/main.cfg
+++ b/main.cfg
@@ -1,5 +1,5 @@
-FRONTEND_LISTEN_URI = tcp://*:1234
+FRONTEND_LISTEN_URI = tcp://*:9247
 
 STORAGE_DIR = /usr/share/metalcon/like
 
-WRITE_WORKER_LISTEN_URI = ipc://like
+WRITE_WORKER_LISTEN_URI = inproc://like
