Updated pom.xml, added some logging output

--- a/main.cfg
+++ b/main.cfg
@@ -2,4 +2,4 @@ FRONTEND_LISTEN_URI = tcp://*:9247
 
 STORAGE_DIR = /usr/share/metalcon/like
 
-WRITE_WORKER_LISTEN_URI = inproc://like
+WRITE_WORKER_LISTEN_URI = ipc://tmp/likeWriter
